Semplificazione del codice: sostituzione di collect(Collectors.toList()) con toList() in vari servizi